# camera_monitoring

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  base.cfg  expectedDetections.txt
3rdParties/darknet/: README.md  darknetConfig.cmake
3rdParties/darknet_gpu/: README.md  darknet_gpuConfig.cmake
3rdParties/darknet_opencl/: README.md  darknet_openclConfig.cmake
3rdParties/darknet_opencl/include/: cl_kernel_source.h  darknet.h
src/: ColorGenerator.cpp  ColorGenerator.h  Config.cpp  Config.h  CppTools.h  Detector.cpp  Detector.h  DirUtils.cpp  DirUtils.h  Frame.h  FrameControler.cpp  FrameControler.h  FrameController.cpp  FrameController.h  HttpCommunication.cpp  HttpCommunication.h  ImgUtils.cpp  ImgUtils.h  Letters.cpp  Letters.h  MovementAnalyzer.cpp  MovementAnalyzer.h  PngTools.cpp  PngTools.h  ProcessUtils.cpp  ProcessUtils.h  SlackCommunication.cpp  SlackCommunication.h  SlackFileTypes.cpp  SlackFileTypes.h  SlackSubscriber.cpp  SlackSubscriber.h  StringUtils.cpp  StringUtils.h  TimeUtils.cpp  TimeUtils.h  Timer.h  VideoGrabber.cpp  VideoGrabber.h  VideoRecorder.cpp  (+4 more)
